@@ -1,10 +1,12 @@
 Changes for 2.1.8
 
 New features:
+..F....... [ZBX-7097] changed dashboard drag'n'drop widget placeholder color in the dark orange and dark blue themes (Pavels)
 ........S. [ZBX-6294] fixed nodata() trigger firing immediately after no data maintenance (asaveljevs, Sasha)
 A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-7097] fixed dashboard drag'n'drop widget placeholder not being displayed in the classic theme (Pavels)
 ....I..... [ZBX-7130] fixed makefiles to build zabbix_proxy only (Sasha)
 ..F....... [ZBX-7055] fixed displaing OK trigger status in maps (Eduard)
 ..F....... [ZBX-7081] fixed node drop down being displayed incorrectly in several pop ups (Pavels)
